--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -31,7 +31,13 @@
     "coinsBonusMarkers": "<b>1 CrypCoin</b> und <b>alle 5 Bonusmarker</b>.",
     "trackMarkers": "Nimm die <b>4 Anteilsmarker</b> und lege je einen davon auf Feld 0 jeder der 4 Unternehmensleisten.",
     "startingBonus": "Nimm von den übrig gebliebenen <b>Start-Forschungsplättchen</b> ein zufälliges und wende dessen Startbonus auf die Anteilsmarker an. Lege danach das Start-Forschungsplättchen in die Schachtel zurück.",
-    "finalNotes": "Der Bot benötigt keine Laborablage, die App verwaltet die Automa-Karten und berechnet automatisch den Helium- und Forschungs-Fortschritt. Lass auch die Start-Aktionskarten und übrige Einzel-Energiekarten in der Schachtel."
+    "finalNotes": "Der Bot benötigt keine Laborablage, die App verwaltet die Automa-Karten und berechnet automatisch den Helium- und Forschungs-Fortschritt. Lass auch die Start-Aktionskarten und übrige Einzel-Energiekarten in der Schachtel.",
+    "heliumBonus": {
+      "title": "Helium-Bonus setzen",
+      "introduction": "Falls du für Luna ein Start-Forschungsplättchen mit Helium-Bonus gezogen hast, trage ihn hier ein:",
+      "heliumNone": "Kein Helium",
+      "heliumCount": "{count} Helium"
+    }
   },
   "turnPlayer": {
     "title": "Spieler | Spieler {player}",
