Fix expand company description for solo card II-7: add fitting text for expanding 2 companies (starting with less valuable)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -104,6 +104,7 @@
       },
       "expandCompany": {
         "expand": "Then she expands that company:",
+        "expandMultiple": "Then she expands each of these companies:<br/>(starting with the less valuable)",
         "min": "MIN",
         "max": "MAX",
         "help": {
