--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -104,6 +104,7 @@
       },
       "expandCompany": {
         "expand": "Dann breitet sich dieses Unternehmen aus:",
+        "expandMultiple": "Dann breiten sich diese Unternehmen aus:<br/>(das weniger wertvolle zuerst)",
         "min": "MIN",
         "max": "MAX",
         "help": {
